--- a/bibtex.bib
+++ b/bibtex.bib
@@ -41,7 +41,7 @@
   publisher={New Rider Press}
 }
 @misc{postgres-docs,
-      author={The PostgreSQL Global Development Group},
+      author={PostgreSQL},
       title={PostgreSQL: Documentation},
       year={2013},
       url={http://www.postgresql.org/docs/}
